--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
