--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-dnd": "^13.1.1",
+    "react-dnd-html5-backend": "^12.1.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
